Add comp for tag creation screen, including allocation options broken down by provider

--- a/public/comps/create-reports.html
+++ b/public/comps/create-reports.html
@@ -58,9 +58,10 @@
             <span id="endday-wrap"><input id="endday" type="text" /></span>
           </div>
           <div class="ui-widget">
-            <h3 id="report-checkbox-toggle" class="collapse">Fields to include</h3>
-            <div id="report-checkbox-area">
+            <h3 id="report-checkbox-toggle" class="toggler collapse">Fields to include</h3>
+            <div id="report-checkbox-area" class="togglee">
               <fieldset class="selfclear">
+                <!-- PLEASE NOTE: These fields are currently in the order they appear on the report. We may decide to present them in some other order (like alphabetical), but the current approach isn't random -->
                 <div class="fourcol">
                   <input type="checkbox" checked name="name" value="Name" /><label for="name">Name</label><br />
                   <input type="checkbox" checked name="name" value="Name" /><label for="name">Funds</label><br />
