add the ability to create users, make a distinction between admin and non-admin users, secure controllers

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <a href="/summaries/">Summaries</a><br/>
 <a href="/network/">Network</a><br/>
 <a href="/trips/">Trips</a><br/>
+<a href="/users/">Users</a><br/>
 
 
   </body>
